<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="image_poster">image poster</string>
</resources>
