<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_catalogue"
        android:icon="@drawable/ic_movies"
        android:title="Catalogue" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="Favorite" />
</menu>